[package]
name = "incubator"
version = "0.1.0"
authors = ["Andrey Pikelner <andrey.pikelner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rug]
version = "1.12"
default-features = false
features = ["float","rational"]
[dependencies]
intbits = "*"
assert_approx_eq = "*"
rayon = "*"
serde = { version = "1.0", features = ["derive"] }
serde_with = "*"
toml = "0.5"

